# todos-fastapi

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  makefile  pyproject.toml  todos.db
src/: main.py
src/infrastructure/: __init__.py  logger.py  postgres.py
src/infrastructure/database/: __init__.py
src/user/orm/: mappers.py  user_table.py
tests/: test_app_runs_without_error.py
