[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["mohseneptune <mohseneptune@gmail.com>"]
readme = "README.md"
packages = [{ include = "todos", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
psycopg = "^3.1.12"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.2"
pre-commit = "^3.5.0"
alembic = "^1.12.0"


[tool.black]
line-length = 88 # Maximum line length
target-version = ['py311'] # Target Python version
string-style = "double" # How to handle string quoting
include-trailing-comma = true # Include a trailing comma on multi-line objects

[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 88 # Maximum line length
ignore = "E203, E266, E501, W503, F401, F403, F405" # Ignore certain error codes
select = "C, E, F, W, B, B9" # Select certain error codes
plugins = "flake8-bandit, flake8-bugbear, flake8-docstrings, flake8-import-order, flake8-annotations"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
